--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   "contributes": {
     "commands": [
       {
-        "command": "angular-webview.start",
+        "command": "quackGit.start",
         "title": "Open webview",
-        "category": "Angular"
+        "category": "Quack Git"
       }
     ]
   },
   "activationEvents": [
-    "onCommand:angular-webview.start"
+    "onCommand:quackGit.start"
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod --output-hashing none && tsc -p tsconfig.extension.json",
+    "start": "ng build --watch && tsc -p tsconfig.extension.json",
+    "build": "ng build --output-hashing none && tsc -p tsconfig.extension.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -31,24 +31,25 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^14.2.12",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "rxjs": "~6.6.3",
+    "@angular/animations": "^15.1.3",
+    "@angular/cdk": "^15.1.3",
+    "@angular/common": "^15.1.3",
+    "@angular/compiler": "^15.1.3",
+    "@angular/core": "^15.1.3",
+    "@angular/forms": "^15.1.3",
+    "@angular/platform-browser": "^15.1.3",
+    "@angular/platform-browser-dynamic": "^15.1.3",
+    "@angular/router": "^15.1.3",
+    "rxjs": "^7.8.0",
     "tslib": "^2.0.0",
     "vscode-test": "^1.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
+    "@angular-devkit/build-angular": "~15.1.4",
     "@angular/cli": "^15.1.4",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "^14.2.12",
+    "@angular/compiler-cli": "^15.1.3",
+    "@angular/language-service": "^15.1.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -64,7 +65,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4",
+    "typescript": "~4.9.5",
     "vsce": "^1.83.0"
   },
   "repository": {
